fixed spacing for announcements and started styling tasks

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 body{
     font-family: Myriad;
     font-size: 12px;
+    color: #777777;
 }
 
 .left
@@ -15,13 +16,8 @@ body{
     {float: right;}
 
 h1{
-    font-size: 3em;
+    font-size: 32px;
     color: #2498f4;
-}
-
-h5{
-    font-size: 2em;
-    color: #fe7f13;
 }
 
 .mini{
@@ -31,6 +27,10 @@ h5{
     text-align: right;
     padding: 1em;
     font-size: 14px;
+}
+
+.mini a:link{
+    text-align: right;
 }
 
 .nav{
@@ -44,6 +44,7 @@ h5{
     color: white;
     padding-top: .2em;
     padding-bottom: .2em;
+    margin-top:.1em;
 }
 
 .dash-green{
@@ -62,7 +63,7 @@ h5{
     width: 99.5%;
     margin: 0 auto;
     position: relative;
-    top: -13em;
+    top: -15em;
     border: 1px solid #eeeeee;
 }
 
@@ -72,13 +73,15 @@ h5{
 }
 
 .announce{
-    height: 51px;
+    min-height: 50px;
     border-bottom: 1px solid #eeeeee;
+    font-size: 1.2em;
+    padding-bottom: 1.2em;
+    padding-top: 1.2em;
 }
 
 .gray-box{
     height: 200px;
-    margin-top: 10px;
     border-radius: 10px;
     background-image:
         linear-gradient(
@@ -102,10 +105,20 @@ h5{
     border-left:1px #eeeeee solid;
     border-bottom:1px #eeeeee solid;
     min-height: 300px;
+    font-size: 21px;
+    color: #2498f3;
+}
+
+.tasks a:link{
+    color: #2498f3;
+}
+
+.tasks a:hover{
+    color: #cccccc;
+    text-decoration: none;
 }
 
 .tasks ol{
-    color: red;
     padding-left: 20px;
 }
 
